// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NativeTimeField > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<input
  class="rmd-text-field rmd-text-field--placeholder-hidden"
  id="text-field-_r_0_"
  name="field"
  placeholder=" "
  type="time"
  value=""
/>
`;

exports[`NativeTimeField > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<input
  class="rmd-text-field rmd-text-field--placeholder-hidden"
  id="text-field-_r_0_"
  name="field"
  placeholder=" "
  type="time"
  value=""
/>
`;

exports[`NativeTimeField > should support an error state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label"
  data-testid="container"
>
  <input
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="text-field-_r_6_"
    name="field"
    placeholder=" "
    type="time"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="text-field-_r_6_"
  >
    Time
  </label>
</div>
`;

exports[`NativeTimeField > should support the disabled state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--label rmd-text-disabled-color"
  data-testid="container"
>
  <input
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    disabled=""
    id="text-field-_r_4_"
    name="field"
    placeholder=" "
    type="time"
    value=""
  />
  <label
    class="rmd-label rmd-label--disabled rmd-label--floating rmd-text-disabled-color"
    for="text-field-_r_4_"
  >
    Time
  </label>
</div>
`;

exports[`NativeTimeField > should support the readOnly state 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--disabled rmd-text-field-container--hoverable rmd-text-field-container--label"
  data-testid="container"
>
  <input
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="text-field-_r_2_"
    name="field"
    placeholder=" "
    readonly=""
    type="time"
    value=""
  />
  <label
    class="rmd-label rmd-label--floating"
    for="text-field-_r_2_"
  >
    Time
  </label>
</div>
`;
